--- a/Taxually.TechnicalTest/Taxually.TechnicalTest.IntegrationTests/Taxually.TechnicalTest.IntegrationTests.csproj
+++ b/Taxually.TechnicalTest/Taxually.TechnicalTest.IntegrationTests/Taxually.TechnicalTest.IntegrationTests.csproj
@@ -23,6 +23,15 @@
     </PackageReference>
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="appsettings.json">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Taxually.TechnicalTest\Taxually.TechnicalTest.csproj" />
   </ItemGroup>
